formatted and commented theme.scss (some name changes)

--- a/_sass/classic/_banner-area.scss
+++ b/_sass/classic/_banner-area.scss
@@ -118,6 +118,9 @@
 				
 				// Content (icon image)
 				content: $banner-icon-url-narrow;
+				
+				// Background
+				background: $banner-icon-background-narrow;
 			}
 			@include medium-layout {
 			
@@ -130,6 +133,9 @@
 				
 				// Content (icon image)
 				content: $banner-icon-url-medium;
+				
+				// Background
+				background: $banner-icon-background-medium;
 			}
 			@include wide-layout {
 			
@@ -142,6 +148,9 @@
 				
 				// Content (icon image)
 				content: $banner-icon-url-wide;
+				
+				// Background
+				background: $banner-icon-background-wide;
 			}
 		}
 	}
